--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 </head>
 	<body>
 		<header>
-			<h1>Erna Neal</h1>
-			<ul>
+			<h1 class="headername">Erna Neal</h1>
+			<ul class="navigation">
 				<li>About</li>
 				<li>Portfolio</li>
 				<li>Contact</li>
 			</ul>
 		</header>
 		<div class="container">
-			<section id="main-bio"
+			<section id="main-bio">
 			<h2>About Me</h2>
 			<p>
 			<img src="assets/images/ernaneal.jpg">
@@ -23,16 +23,17 @@
 			Erna has been in real estate most of her career life, it has been a fantastic adventure helping people buy and sell homes. 
 			She is a mother of identical twin girls. Now she is going to UCF's Coding Boot Camp because it is time for a career change. She has a lot of interest in coding and this will be an exciting career change with lots of opportunities.</p>
 			</section>
-		</div>
+		
 
-		<div class="sidebar">
+		<section class="sidebar">
 		<h3>Connect with Me</h3>
-			<a href="http://www.github.com/ednas"><img border="0" alt="Git" src="assets/images/git.png" width="100" height="100"></a>
-			<a href="http://www.linkedin.com/in/ernaneal"><img border="0" alt="Linkedin"src="assets/images/linkedin.jpg" width="100" height="100"></a>
-			<a href="http://www.stackoverflow.com/users/6115857/edna"><img border="0" alt="Stackoverflow" src="assets/images/stackoverflow.png" width="100" height="100"></a>
+			<a href="http://www.github.com/ednas"><img border="0" alt="Git" src="assets/images/git.png" width="80" height="80"></a>
+			<a href="http://www.linkedin.com/in/ernaneal"><img border="0" alt="Linkedin"src="assets/images/linkedin.jpg" width="80" height="80"></a>
+			<a href="http://www.stackoverflow.com/users/6115857/edna"><img border="0" alt="Stackoverflow" src="assets/images/stackoverflow.png" width="80" height="80"></a>
+		</section>
 		</div>
 
-		<footer>
+		<footer class="footer">
 		<center>Copyright 2016 Erna Neal</center>
 		</footer>
 	</body>
