--- a/portfolio.html
+++ b/portfolio.html
@@ -6,37 +6,38 @@
 </head>
 <body>
 		<header>
-			<h1>Erna Neal</h1>
-			<ul>
+			<h1 class="headername">Erna Neal</h1>
+			<ul class="navigation">
 				<li>About</li>
 				<li>Portfolio</li>
 				<li>Contact</li>
 			</ul>
 		</header>
-
-	<section>
+<div class="container">
+	<section class:"portfolio">
 		<h2>Portfolio</h2>
 		<tr>
-		<td><img src="assets/images/portfoliobusinessman.jpg"></td>
-		<td><img src="assets/images/portfolioearbuds.jpg"></td>
+		<td><img src="assets/images/portfoliobusinessman.jpg" width="300" height="300" border="15px"></td>
+		<td><img src="assets/images/portfolioearbuds.jpg" width="300" height="300" border="15px"></td>
 		</tr>
 		<tr>
-		<td><img src="assets/images/portfolioipad.jpg"></td>
-		<td><img src="assets/images/portfoliophone.jpg"></td>
+		<td><img src="assets/images/portfolioipad.jpg" width="300" height="300" border="15px"></td>
+		<td><img src="assets/images/portfoliophone.jpg" width="300" height="300" border="15px"></td>
 		</tr>
 		<tr>
-		<td><img src="assets/images/portfoliotechnic.jpg"></td>
+		<td><img src="assets/images/portfoliotechnic.jpg" width="300" height="300" border="15px"></td>
 		</tr>
 
 	</section>
 
-		<div class="sidebar">
+		<section class="sidebar">
 		<h3>Connect with Me</h3>
-			<a href="http://www.github.com/ednas"><img border="0" alt="Git" src="assets/images/git.png" width="100" height="100"></a>
-			<a href="http://www.linkedin.com/in/ernaneal"><img border="0" alt="Linkedin"src="assets/images/linkedin.jpg" width="100" height="100"></a>
-			<a href="http://www.stackoverflow.com/users/6115857/edna"><img border="0" alt="Stackoverflow" src="assets/images/stackoverflow.png" width="100" height="100"></a>
-		</div>
-	<footer>
+			<a href="http://www.github.com/ednas"><img border="0" alt="Git" src="assets/images/git.png" width="80" height="80"></a>
+			<a href="http://www.linkedin.com/in/ernaneal"><img border="0" alt="Linkedin"src="assets/images/linkedin.jpg" width="80" height="80"></a>
+			<a href="http://www.stackoverflow.com/users/6115857/edna"><img border="0" alt="Stackoverflow" src="assets/images/stackoverflow.png" width="80" height="80"></a>
+		</section>
+</div>
+	<footer class="footer">
 		<center>Copyright 2016 Erna Neal</center>
 	</footer>
 </body>
