made CSS updates

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 	<body>
 		<header>
-			<h1 class="headername">Erna Neal</h1>
+			<h1>Erna Neal</h1>
 			<ul class="navigation">
 				<li>About</li>
 				<li>Portfolio</li>
@@ -34,7 +34,7 @@
 		</div>
 
 		<footer class="footer">
-		<center>Copyright 2016 Erna Neal</center>
+		<center>(C) Copyright 2016 Erna Neal</center>
 		</footer>
 	</body>
 </html>
