--- a/portfolio.html
+++ b/portfolio.html
@@ -6,27 +6,29 @@
 </head>
 <body>
 		<header>
-			<h1 class="headername">Erna Neal</h1>
+			<h1>Erna Neal</h1>
 			<ul class="navigation">
-				<li>About</li>
-				<li>Portfolio</li>
-				<li>Contact</li>
+				<li id=left>About</li>
+				<li id=center>Portfolio</li>
+				<li id=right>Contact</li>
 			</ul>
 		</header>
 <div class="container">
 	<section class:"portfolio">
 		<h2>Portfolio</h2>
+		<table id=portfolioimg>
 		<tr>
-		<td><img src="assets/images/portfoliobusinessman.jpg" width="300" height="300" border="15px"></td>
-		<td><img src="assets/images/portfolioearbuds.jpg" width="300" height="300" border="15px"></td>
+		<td><img src="assets/images/portfoliobusinessman.jpg" width="300" height="300" padding="80px"></td>
+		<td><img src="assets/images/portfolioearbuds.jpg" width="300" height="300" padding="80px"></td>
 		</tr>
 		<tr>
-		<td><img src="assets/images/portfolioipad.jpg" width="300" height="300" border="15px"></td>
-		<td><img src="assets/images/portfoliophone.jpg" width="300" height="300" border="15px"></td>
+		<td><img src="assets/images/portfolioipad.jpg" width="300" height="300" padding="80px"></td>
+		<td><img src="assets/images/portfoliophone.jpg" width="300" height="300" padding="80px"></td>
 		</tr>
 		<tr>
-		<td><img src="assets/images/portfoliotechnic.jpg" width="300" height="300" border="15px"></td>
+		<td><img src="assets/images/portfoliotechnic.jpg" width="300" height="300" padding="80px"></td>
 		</tr>
+		</table>
 
 	</section>
 
@@ -38,7 +40,7 @@
 		</section>
 </div>
 	<footer class="footer">
-		<center>Copyright 2016 Erna Neal</center>
+		<center>(C) Copyright 2016 Erna Neal</center>
 	</footer>
 </body>
 </html>
