Fixed HTML errors

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,19 +14,20 @@
 			</ul>
 		</header>
 <div class="container">
-	<section class:"portfolio">
+	<section class="portfolio">
 		<h2>Portfolio</h2>
 		<table id=portfolioimg>
 		<tr>
-		<td><img src="assets/images/portfoliobusinessman.jpg" width="300" height="300" padding="80px"></td>
-		<td><img src="assets/images/portfolioearbuds.jpg" width="300" height="300" padding="80px"></td>
+		<td><img src="assets/images/portfoliobusinessman.jpg" width="300" height="300" alt="businessman"></td>
+		<td><img src="assets/images/portfolioearbuds.jpg" width="300" height="300" alt="earbuds"></td>
 		</tr>
 		<tr>
-		<td><img src="assets/images/portfolioipad.jpg" width="300" height="300" padding="80px"></td>
-		<td><img src="assets/images/portfoliophone.jpg" width="300" height="300" padding="80px"></td>
+		<td><img src="assets/images/portfolioipad.jpg" width="300" height="300" alt="ipad"></td>
+		<td><img src="assets/images/portfoliophone.jpg" width="300" height="300" alt="phone"></td>
 		</tr>
 		<tr>
-		<td><img src="assets/images/portfoliotechnic.jpg" width="300" height="300" padding="80px"></td>
+		<td><img src="assets/images/portfoliotechnic.jpg" width="300" height="300" alt="technic"></td>
+		<td></td>
 		</tr>
 		</table>
 
@@ -34,13 +35,13 @@
 
 		<section class="sidebar">
 		<h3>Connect with Me</h3>
-			<a href="http://www.github.com/ednas"><img border="0" alt="Git" src="assets/images/git.png" width="80" height="80"></a>
-			<a href="http://www.linkedin.com/in/ernaneal"><img border="0" alt="Linkedin"src="assets/images/linkedin.jpg" width="80" height="80"></a>
-			<a href="http://www.stackoverflow.com/users/6115857/edna"><img border="0" alt="Stackoverflow" src="assets/images/stackoverflow.png" width="80" height="80"></a>
+			<a href="http://www.github.com/ednas"><img alt="Git" src="assets/images/git.png" width="80" height="80"></a>
+			<a href="http://www.linkedin.com/in/ernaneal"><img alt="Linkedin" src="assets/images/linkedin.jpg" width="80" height="80"></a>
+			<a href="http://www.stackoverflow.com/users/6115857/edna"><img alt="Stackoverflow" src="assets/images/stackoverflow.png" width="80" height="80"></a>
 		</section>
 </div>
 	<footer class="footer">
-		<center>(C) Copyright 2016 Erna Neal</center>
+		© Copyright 2016 Erna Neal
 	</footer>
 </body>
 </html>
