--- a/contact.html
+++ b/contact.html
@@ -21,32 +21,33 @@
 	
 		<br>
 		Name
-		<input name="Name"></input>
-		</br>
+		<input name="Name">
+		<br>
 		<br>
 		E-mail
-		<input name="E-mail"></input>
-		</br>
+		<input name="E-mail">
+		<br>
 		<br>
 		Message
 		<br>
-		</br>
 		<textarea name="message" rows="10" cols="30"></textarea>
-		</br>
+		<br>
+		<br>
+		<input type="submit" value="Submit">
 		</form>
 	
 	</section>
 
 			<section class="sidebar">
 		<h3>Connect with Me</h3>
-			<a href="http://www.github.com/ednas"><img border="0" alt="Git" src="assets/images/git.png" width="80" height="80"></a>
-			<a href="http://www.linkedin.com/in/ernaneal"><img border="0" alt="Linkedin"src="assets/images/linkedin.jpg" width="80" height="80"></a>
-			<a href="http://www.stackoverflow.com/users/6115857/edna"><img border="0" alt="Stackoverflow" src="assets/images/stackoverflow.png" width="80" height="80"></a>
+			<a href="http://www.github.com/ednas"><img alt="Git" src="assets/images/git.png" width="80" height="80"></a>
+			<a href="http://www.linkedin.com/in/ernaneal"><img alt="Linkedin" src="assets/images/linkedin.jpg" width="80" height="80"></a>
+			<a href="http://www.stackoverflow.com/users/6115857/edna"><img alt="Stackoverflow" src="assets/images/stackoverflow.png" width="80" height="80"></a>
 			</section>
 		</div>
 
 	<footer class="footer">
-	<center>(C) Copyright 2016 Erna Neal</center>
+	© Copyright 2016 Erna Neal
 	</footer>
 </body>
 </html>
