--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<section id="main-bio">
 			<h2>About Me</h2>
 			<p>
-			<img src="assets/images/ernaneal.jpg">
+			<img id="self" src="assets/images/ernaneal.jpg" alt="erna">
 			Erna Neal hails from the country of fire and ice, Iceland. She moved to the sunny state of Florida when she was in high school and absolutely loves the warmth and the sun here. 
 			Erna has been in real estate most of her career life, it has been a fantastic adventure helping people buy and sell homes. 
 			She is a mother of identical twin girls. Now she is going to UCF's Coding Boot Camp because it is time for a career change. She has a lot of interest in coding and this will be an exciting career change with lots of opportunities.</p>
@@ -27,14 +27,14 @@
 
 		<section class="sidebar">
 		<h3>Connect with Me</h3>
-			<a href="http://www.github.com/ednas"><img border="0" alt="Git" src="assets/images/git.png" width="80" height="80"></a>
-			<a href="http://www.linkedin.com/in/ernaneal"><img border="0" alt="Linkedin"src="assets/images/linkedin.jpg" width="80" height="80"></a>
-			<a href="http://www.stackoverflow.com/users/6115857/edna"><img border="0" alt="Stackoverflow" src="assets/images/stackoverflow.png" width="80" height="80"></a>
+			<a href="http://www.github.com/ednas"><img alt="Git" src="assets/images/git.png" width="80" height="80"></a>
+			<a href="http://www.linkedin.com/in/ernaneal"><img alt="Linkedin" src="assets/images/linkedin.jpg" width="80" height="80"></a>
+			<a href="http://www.stackoverflow.com/users/6115857/edna"><img alt="Stackoverflow" src="assets/images/stackoverflow.png" width="80" height="80"></a>
 		</section>
 		</div>
 
 		<footer class="footer">
-		<center>(C) Copyright 2016 Erna Neal</center>
+		© Copyright 2016 Erna Neal
 		</footer>
 	</body>
 </html>
