Made CSS updates

--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
 		<header>
 			<h1>Erna Neal</h1>
 			<ul class="navigation">
-				<li>About</li>
-				<li>Portfolio</li>
-				<li>Contact</li>
+				<li id=left>About</li>
+				<li id=center>Portfolio</li>
+				<li id=right>Contact</li>
 			</ul>
 		</header>
 		<div class="container">
