--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
 <body>
 		<header>
 			<h1>Erna Neal</h1>
+			<div class="rightnav"
 			<ul class="navigation">
 				<li id=left>About</li>
 				<li id=center>Portfolio</li>
