Fixed background image and CSS issues

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			<a href="http://www.linkedin.com/in/ernaneal"><img alt="Linkedin" src="assets/images/linkedin.jpg" width="80" height="80"></a>
 			<a href="http://www.stackoverflow.com/users/6115857/edna"><img alt="Stackoverflow" src="assets/images/stackoverflow.png" width="80" height="80"></a>
 		</section>
+		<div class="push"></div>
 		</div>
 
 		<footer class="footer">
