fixed Git image link

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
 
 		<section class="sidebar">
 		<h3>Connect with Me</h3>
-			<a href="http://www.github.com/ednas"><img alt="Git" src="assets/images/git.png" width="80" height="80"></a>
+			<a href="http://www.github.com/ednas"><img alt="Git" src="assets/images/Git.png" width="80" height="80"></a>
 			<a href="http://www.linkedin.com/in/ernaneal"><img alt="Linkedin" src="assets/images/linkedin.jpg" width="80" height="80"></a>
 			<a href="http://www.stackoverflow.com/users/6115857/edna"><img alt="Stackoverflow" src="assets/images/stackoverflow.png" width="80" height="80"></a>
 		</section>
