--- a/contact.html
+++ b/contact.html
@@ -1,54 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Contact</title>
+	<meta charset="UTF-8">
+	<title>Contact | Erna Neal</title>
+		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 <body>
-		<header>
-			<h1>Erna Neal</h1>
-			<ul class="navigation">
-				<li id=left>About</li>
-				<li id=center>Portfolio</li>
-				<li id=right>Contact</li>
-			</ul>
-		</header>
+	<header id="masthead">
 		<div class="container">
-	<section class="contactform">
-		<h2>Contact</h2>
-		<form>
-	
-		<br>
-		Name
-		<input name="Name">
-		<br>
-		<br>
-		E-mail
-		<input name="E-mail">
-		<br>
-		<br>
-		Message
-		<br>
-		<textarea name="message" rows="10" cols="30"></textarea>
-		<br>
-		<br>
-		<input type="submit" value="Submit">
+			<a href="index.html" id="logo">Erna Neal</a>
+		<nav>
+			<a href="index.html">About</a>
+			<a href="portfolio.html">Portfolio</a>
+			<a href="contact.html">Contact</a>
+		</nav>
+	</header>
+
+		<div id="main-container" class="container">
+	<section class="main-section">
+		<h1>Contact</h1>
+		
+		<form id="contact-form">
+			<ul>
+				<li>
+					<label for="name">Name</label>
+					<input type="text" id="name" name="name" placeholder="John Smith" required="required">
+				</li>
+				<li>
+						<label for="email">Email</label>
+						<input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+				</li>
+				<li>
+						<label for="message">Message</label>
+						<textarea id="message" name="message" required="required"></textarea>
+				</li>
+				</ul>
+		<input type="submit">
 		</form>
 	
 	</section>
 
 			<section class="sidebar">
-		<h3>Connect with Me</h3>
-			<a href="http://www.github.com/ednas"><img alt="Git" src="assets/images/Git.png" width="80" height="80"></a>
-			<a href="http://www.linkedin.com/in/ernaneal"><img alt="Linkedin" src="assets/images/linkedin.jpg" width="80" height="80"></a>
-			<a href="http://www.stackoverflow.com/users/6115857/edna"><img alt="Stackoverflow" src="assets/images/stackoverflow.png" width="80" height="80"></a>
-			</section>
-		 <div class="push"></div>
-		</div>
+			<div id="connect">
+				<h2>Connect with Me</h2>
 
-	<footer class="footer">
-	© Copyright 2016 Erna Neal
+				<a href="http://www.github.com/ednas"><img alt="Git" src="assets/images/Git.png"></a>
+				<a href="http://www.linkedin.com/in/ernaneal"><img alt="Linkedin" src="assets/images/linkedin.jpg"></a>
+				<a href="http://www.stackoverflow.com/users/6115857/edna"><img alt="Stackoverflow" src="assets/images/stackoverflow.png"></a>
+			</div>
+			</section>
+</div>
+	<footer>
+		<div class="footer">
+			&copy; Copyright 2016 Erna Neal
 	</footer>
 </body>
 </html>
