--- a/index.html
+++ b/index.html
@@ -2,40 +2,50 @@
 <html>
 <head>
 	<title>Erna Neal</title>
+		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
-	<body>
-		<header>
-			<h1>Erna Neal</h1>
-			<ul class="navigation">
-				<li id=left>About</li>
-				<li id=center>Portfolio</li>
-				<li id=right>Contact</li>
-			</ul>
-		</header>
+<body>
+	<header id="masthead">
 		<div class="container">
-			<section id="main-bio">
-			<h2>About Me</h2>
-			<p>
+			<a href="index.html" id="logo">Erna Neal</a>
+		<nav>
+			<a href="index.html">About</a>
+			<a href="portfolio.html">Portfolio</a>
+			<a href="contact.html">Contact</a>
+		</nav>
+	</header>
+
+		<div id="main-container" class="container">
+			<section class="main-section">
+			<h1>About Me</h1>
+			
 			<img id="self" src="assets/images/ernaneal.jpg" alt="erna">
-			Erna Neal hails from the country of fire and ice, Iceland. She moved to the sunny state of Florida when she was in high school and absolutely loves the warmth and the sun here. 
-			Erna has been in real estate most of her career life, it has been a fantastic adventure helping people buy and sell homes. 
+			
+			<p>Erna Neal hails from the country of fire and ice, Iceland. She moved to the sunny state of Florida when she was in high school and absolutely loves the warmth and the sun here. </p>
+
+			<p>Erna has been in real estate most of her career life, it has been a fantastic adventure helping people buy and sell homes. 
 			She is a mother of identical twin girls. Now she is going to UCF's Coding Boot Camp because it is time for a career change. She has a lot of interest in coding and this will be an exciting career change with lots of opportunities.</p>
-			</section>
+
+		</section>
 		
 
 		<section class="sidebar">
-		<h3>Connect with Me</h3>
-			<a href="http://www.github.com/ednas"><img alt="Git" src="assets/images/Git.png" width="80" height="80"></a>
-			<a href="http://www.linkedin.com/in/ernaneal"><img alt="Linkedin" src="assets/images/linkedin.jpg" width="80" height="80"></a>
-			<a href="http://www.stackoverflow.com/users/6115857/edna"><img alt="Stackoverflow" src="assets/images/stackoverflow.png" width="80" height="80"></a>
-		</section>
-		<div class="push"></div>
-		</div>
+			<div id="connect">
+			<h2>Connect with Me</h2>
 
-		<footer class="footer">
-		© Copyright 2016 Erna Neal
-		</footer>
-	</body>
+			<a href="http://www.github.com/ednas"><img alt="Git" src="assets/images/Git.png"</a>
+			<a href="http://www.linkedin.com/in/ernaneal"><img alt="Linkedin" src="assets/images/linkedin.jpg"</a>
+			<a href="http://www.stackoverflow.com/users/6115857/edna"><img alt="Stackoverflow" src="assets/images/stackoverflow.png"</a>
+			</div>
+		</section>
+	</div>
+
+	<footer>
+		<div class="container">
+			&copy; Copyright 2016 Erna Neal
+		</div>
+	</footer>
+</body>
 </html>
