--- a/portfolio.html
+++ b/portfolio.html
@@ -1,49 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio</title>
+	<meta charset="UTF-8">
+	<title>Portfolio | Erna Neal</title>
+		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-		<header>
-			<h1>Erna Neal</h1>
-			<div class="rightnav"
-			<ul class="navigation">
-				<li id=left>About</li>
-				<li id=center>Portfolio</li>
-				<li id=right>Contact</li>
-			</ul>
-		</header>
-<div class="container">
-	<section class="portfolio">
-		<h2>Portfolio</h2>
-		<table id=portfolioimg>
-		<tr>
-		<td><img src="assets/images/portfoliobusinessman.jpg" width="300" height="300" alt="businessman"></td>
-		<td><img src="assets/images/portfolioearbuds.jpg" width="300" height="300" alt="earbuds"></td>
-		</tr>
-		<tr>
-		<td><img src="assets/images/portfolioipad.jpg" width="300" height="300" alt="ipad"></td>
-		<td><img src="assets/images/portfoliophone.jpg" width="300" height="300" alt="phone"></td>
-		</tr>
-		<tr>
-		<td><img src="assets/images/portfoliotechnic.jpg" width="300" height="300" alt="technic"></td>
-		<td></td>
-		</tr>
-		</table>
+
+	<header id="masthead">
+		<div class="container">
+			<a href="index.html" id="logo">Erna Neal</a>
+		<nav>
+			<a href="index.html">About</a>
+			<a href="portfolio.html">Portfolio</a>
+			<a href="contact.html">Contact</a>
+		</nav>
+		</div>
+	</header>
+
+<div id="main-container" class="container">
+	<section class="main-section">
+		<h1>Portfolio</h1>
+		
+		<div class="work">
+			<img src="assets/images/portfoliobusinessman.jpg" alt="businessman">
+
+			<h3>Businessman</h3>
+		</div>
+
+		<div class="work">
+			<img src="assets/images/portfolioearbuds.jpg" alt="earbuds">
+
+			<h3>Earbuds</h3>
+		</div>
+		<div class="work">
+			<img src="assets/images/portfolioipad.jpg" alt="ipad">
+
+			<h3>iPad</h3>
+		</div>
+		<div class="work">
+			<img src="assets/images/portfoliophone.jpg" alt="phone">
+
+			<h3>Phone</h3>
+		</div>
+		<div class="work">
+			<img src="assets/images/portfoliotechnic.jpg" alt="technic">
+			
+			<h3>Technic</h3>
+		</div>
 
 	</section>
 
 		<section class="sidebar">
-		<h3>Connect with Me</h3>
-			<a href="http://www.github.com/ednas"><img alt="Git" src="assets/images/Git.png" width="80" height="80"></a>
-			<a href="http://www.linkedin.com/in/ernaneal"><img alt="Linkedin" src="assets/images/linkedin.jpg" width="80" height="80"></a>
-			<a href="http://www.stackoverflow.com/users/6115857/edna"><img alt="Stackoverflow" src="assets/images/stackoverflow.png" width="80" height="80"></a>
-		</section>
-		<div class="push"></div>
-</div>
-	<footer class="footer">
-		© Copyright 2016 Erna Neal
+		<div id="connect">
+			<h2>Connect with Me</h2>
+
+			<a href="http://www.github.com/ednas"><img alt="Git" src="assets/images/Git.png"></a>
+			<a href="http://www.linkedin.com/in/ernaneal"><img alt="Linkedin" src="assets/images/linkedin.jpg"></a>
+			<a href="http://www.stackoverflow.com/users/6115857/edna"><img alt="Stackoverflow" src="assets/images/stackoverflow.png"></a>
+		</div>
+		</section>	
+	</div>
+
+	<footer>
+		<div class="container">
+			&copy; Copyright 2016 Erna Neal
+		</div>
 	</footer>
 </body>
 </html>
