Fixed CSS media queries for size 640px

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Erna Neal</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>About | Erna Neal</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -15,13 +18,14 @@
 			<a href="portfolio.html">Portfolio</a>
 			<a href="contact.html">Contact</a>
 		</nav>
+		</div>
 	</header>
 
 		<div id="main-container" class="container">
 			<section class="main-section">
 			<h1>About Me</h1>
 			
-			<img id="self" src="assets/images/ernaneal.jpg" alt="erna">
+			<img id="auth-image" src="assets/images/ernaneal.jpg" alt="erna">
 			
 			<p>Erna Neal hails from the country of fire and ice, Iceland. She moved to the sunny state of Florida when she was in high school and absolutely loves the warmth and the sun here. </p>
 
