--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>Contact | Erna Neal</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -16,6 +18,7 @@
 			<a href="portfolio.html">Portfolio</a>
 			<a href="contact.html">Contact</a>
 		</nav>
+		</div>
 	</header>
 
 		<div id="main-container" class="container">
