Fixed media queries for size 768px

--- a/contact.html
+++ b/contact.html
@@ -49,9 +49,9 @@
 			<div id="connect">
 				<h2>Connect with Me</h2>
 
-				<a href="http://www.github.com/ednas"><img alt="Git" src="assets/images/Git.png"></a>
-				<a href="http://www.linkedin.com/in/ernaneal"><img alt="Linkedin" src="assets/images/linkedin.jpg"></a>
-				<a href="http://www.stackoverflow.com/users/6115857/edna"><img alt="Stackoverflow" src="assets/images/stackoverflow.png"></a>
+				<a href="http://www.github.com/ednas"><img alt="Git" src="assets/images/Git.png" class="social"></a>
+				<a href="http://www.linkedin.com/in/ernaneal"><img alt="Linkedin" src="assets/images/linkedin.jpg" class="social"></a>
+				<a href="http://www.stackoverflow.com/users/6115857/edna"><img alt="Stackoverflow" src="assets/images/stackoverflow.png" class="social"></a>
 			</div>
 			</section>
 </div>
