Updated index.php to point to index.html, changed Erna to Edna in text

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Portfolio | Erna Neal</title>
+	<title>Portfolio | Edna Neal</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -12,7 +12,7 @@
 
 	<header id="masthead">
 		<div class="container">
-			<a href="index.html" id="logo">Erna Neal</a>
+			<a href="index.html" id="logo">Edna Neal</a>
 		<nav>
 			<a href="index.html">About</a>
 			<a href="portfolio.html">Portfolio</a>
@@ -67,7 +67,7 @@
 
 	<footer>
 		<div class="container">
-			&copy; Copyright 2016 Erna Neal
+			&copy; Copyright 2016 Edna Neal
 		</div>
 	</footer>
 </body>
