--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Contact | Erna Neal</title>
+	<title>Contact | Edna Neal</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -12,7 +12,7 @@
 <body>
 	<header id="masthead">
 		<div class="container">
-			<a href="index.html" id="logo">Erna Neal</a>
+			<a href="index.html" id="logo">Edna Neal</a>
 		<nav>
 			<a href="index.html">About</a>
 			<a href="portfolio.html">Portfolio</a>
@@ -57,7 +57,7 @@
 </div>
 	<footer>
 		<div class="footer">
-			&copy; Copyright 2016 Erna Neal
+			&copy; Copyright 2016 Edna Neal
 	</footer>
 </body>
 </html>
