--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>About | Erna Neal</title>
+	<title>About | Edna Neal</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -12,7 +12,7 @@
 <body>
 	<header id="masthead">
 		<div class="container">
-			<a href="index.html" id="logo">Erna Neal</a>
+			<a href="index.html" id="logo">Edna Neal</a>
 		<nav>
 			<a href="index.html">About</a>
 			<a href="portfolio.html">Portfolio</a>
@@ -25,11 +25,11 @@
 			<section class="main-section">
 			<h1>About Me</h1>
 			
-			<img id="auth-image" src="assets/images/ernaneal.jpg" alt="erna">
+			<img id="auth-image" src="assets/images/ernaneal.jpg" alt="edna">
 			
-			<p>Erna Neal hails from the country of fire and ice, Iceland. She moved to the sunny state of Florida when she was in high school and absolutely loves the warmth and the sun here. </p>
+			<p>Edna Neal hails from the country of fire and ice, Iceland. She moved to the sunny state of Florida when she was in high school and absolutely loves the warmth and the sun here. </p>
 
-			<p>Erna has been in real estate most of her career life, it has been a fantastic adventure helping people buy and sell homes. 
+			<p>Edna has been in real estate most of her career life, it has been a fantastic adventure helping people buy and sell homes. 
 			She is a mother of identical twin girls. Now she is going to UCF's Coding Boot Camp because it is time for a career change. She has a lot of interest in coding and this will be an exciting career change with lots of opportunities.</p>
 
 		</section>
@@ -48,7 +48,7 @@
 
 	<footer>
 		<div class="container">
-			&copy; Copyright 2016 Erna Neal
+			&copy; Copyright 2016 Edna Neal
 		</div>
 	</footer>
 </body>
