made note about need to make submit button work

--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,7 @@
 				</li>
 				</ul>
 		<input type="submit">
+		<!--Future development, send an email when someone fills out the form-->
 		</form>
 	
 	</section>
