--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Contact | Edna Neal</title>
+	<title>Contact | Edna Jonsson</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -12,7 +12,7 @@
 <body>
 	<header id="masthead">
 		<div class="container">
-			<a href="index.html" id="logo">Edna Neal</a>
+			<a href="index.html" id="logo">Edna Jonsson</a>
 		<nav>
 			<a href="index.html">About</a>
 			<a href="portfolio.html">Portfolio</a>
@@ -51,14 +51,14 @@
 				<h2>Connect with Me</h2>
 
 				<a href="http://www.github.com/ednas"><img alt="Git" src="assets/images/Git.png" class="social"></a>
-				<a href="http://www.linkedin.com/in/ernaneal"><img alt="Linkedin" src="assets/images/linkedin.jpg" class="social"></a>
+				<a href="http://www.linkedin.com/in/ednajonsson"><img alt="Linkedin" src="assets/images/linkedin.jpg" class="social"></a>
 				<a href="http://www.stackoverflow.com/users/6115857/edna"><img alt="Stackoverflow" src="assets/images/stackoverflow.png" class="social"></a>
 			</div>
 			</section>
 </div>
 	<footer>
 		<div class="footer">
-			&copy; Copyright 2016 Edna Neal
+			&copy; Copyright 2016 Edna Jonsson
 	</footer>
 </body>
 </html>
